--- a/index.html
+++ b/index.html
@@ -17,9 +17,32 @@
 <body>
     <div class="main-layout">
         <!-- Left Navigation -->
+        <div class="nav-menu">
+            <a href="#home" class="nav-item">
+                <i class="fas fa-home nav-icon"></i>
+                <span class="nav-text">Home</span>
+            </a>
+            <a href="#about" class="nav-item">
+                <i class="fas fa-user nav-icon"></i>
+                <span class="nav-text">About</span>
+            </a>
+            <a href="#resume" class="nav-item">
+                <i class="fas fa-file-alt nav-icon"></i>
+                <span class="nav-text">Resume</span>
+            </a>
+            <a href="#portfolio" class="nav-item">
+                <i class="fas fa-briefcase nav-icon"></i>
+                <span class="nav-text">Portfolio</span>
+            </a>
+            <a href="#contact" class="nav-item">
+                <i class="fas fa-envelope nav-icon"></i>
+                <span class="nav-text">Contact</span>
+            </a>
+        </div>
+        </nav> -->
         <nav class="navbar">
             <div class="nav-menu">
-                <a href="#home" class="nav-item">
+                <a href="#home" class="nav-item active">
                     <i class="fas fa-home nav-icon"></i>
                     <span class="nav-text">Home</span>
                 </a>
@@ -41,6 +64,8 @@
                 </a>
             </div>
         </nav>
+
+
 
         <!-- Main Content -->
         <section id="home">
